--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ path {
           <a>&nbsp;&nbsp;</a>
     <input 
            type="button" 
-           value="Yearly"
+           value="1Y"
            onclick="updateYearly()" 
            class='buttongraph' />
            <a>&nbsp;&nbsp;</a>
@@ -662,14 +662,14 @@ path {
 
     <input  
            type="button" 
-           value="Monthly" 
+           value="1M" 
            onclick="updateMonthly()" 
            class='buttongraph'/>
            <a>&nbsp;&nbsp;</a>
 
   <input 
          type="button" 
-         value="Weekly" 
+         value="1W" 
          onclick="updateWeekly()"
          class='buttongraph' />
 
