--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ path {
 </div> -->
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+<script src="//d3js.org/d3.v3.min.js"></script>
 
 <script>
   $("a").click(function(){
