--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@ d3.csv("Indexes.csv", function(error, data) {
         focus.select(".tooltip-fintech").text(formatValue(d.Fintech.toFixed(2)));
         focus.select(".tooltip-faang").text(formatValue(d.FAANG.toFixed(2)));
         focus.select(".tooltip-nasdaq").text(formatValue(d.NASDAQ.toFixed(2)));
-        focus.select(".tooltip-snp").text(formatValue(d.NASDAQ.toFixed(2)));
+        focus.select(".tooltip-snp").text(formatValue(d.SNP500.toFixed(2)));
     }
 });
 
