--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ path {
           <polygon id="site-logo-a" points="0 0 170 0 170 24 0 24"/>
         </defs>
         <g fill="none" fill-rule="evenodd" transform="translate(-1)">
-          <img class= 'f-prime-logo-nav-bar' src="../F-PrimeSig1A.png">
+          <img class= 'f-prime-logo-nav-bar' src="F-Prime-Capital-Logo.jpeg">
           
         </g>
         
