Updated Potential additions section and nav bar

--- a/index.html
+++ b/index.html
@@ -527,6 +527,9 @@ path {
                   <li class="nav__list-item nav__list-item--link nav__list-item--last">
             <a class="nav__link" href="#comps" data-page="companies" target="_self">Companies</a>
           </li>
+          <li class="nav__list-item nav__list-item--link nav__list-item--last">
+            <a class="nav__link" href="#future" data-page="future" target="_self">Future Companies</a>
+          </li>
                   <li class="nav__list-item nav__list-item--link nav__list-item--last">
             <a class="nav__link" href="#about" data-page="about" target="_self">About</a>
           </li>
@@ -1892,7 +1895,7 @@ SOFTWARE. -->
 <br />
 <br />
 <div class="stats__text">
-  <h2 class="stats__h">  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Potential Future Additions</h2>
+  <h2 class="stats__h" id = "future">  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Potential Future Additions</h2>
 </div>
 
 
