--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@ path {
     <br/>
     <br/>
     <div>
-    <img class = "fprime-logo-gray-bg" src="../FPrime_logo_gray_bg.png" alt="">
+    <img class = "fprime-logo-gray-bg" src="../FPrime_logo_gray_bg.PNG" alt="">
     <a href = "https://fprimecapital.com/sector/technology"> <h4 class="site_redirect">F-Prime Home -></h4></a>
   </div>
     <br/>
@@ -588,7 +588,7 @@ path {
         </div>
         <div class="sector__intro-image">
           <figure class="sector__intro-figure">
-            <img src="../header-slash.png" alt="">
+            <img src="../header-slash.PNG" alt="">
           </figure>
         </div>
       </div>
