--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ path {
     <br/>
     <div class = "top_line">
       
-      <img class = "fprime-logo-gray-bg" src="../FPrime_logo_gray_bg.PNG" alt="" id = "left">
+      <img class = "fprime-logo-gray-bg" src="FPrime_logo_gray_bg.PNG" alt="" id = "left">
       <a href = "https://fprimecapital.com/sector/technology" id = "right" class="site_redirect">F-Prime Home -></a>
       <br/>
       <br/>
@@ -608,7 +608,7 @@ path {
         </div>
         <div class="sector__intro-image">
           <figure class="sector__intro-figure">
-            <img src="../header-slash.PNG" alt="">
+            <img src="header-slash.PNG" alt="">
           </figure>
         </div>
       </div>
