changing mobile css

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ table {
       body {
         padding: 0;
         margin: 0;
-        width: 320px;
+        width: 400px;
       }
     }
 
@@ -486,10 +486,14 @@ path {
 @media (min-width: 1200px){.base-intro{padding-right:80px}}
 .base-intro:after{content:'';display:table;clear:both}
 @media (min-width: 768px){.base-intro{margin-top:0}}
-.base-intro__content{-webkit-transform:translateZ(0px);transform:translateZ(0px);display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-flex:1;-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;position:relative}@media (min-width: 920px){.base-intro__content{margin-left:-15px;-webkit-flex-wrap:nowrap;-ms-flex-wrap:nowrap;flex-wrap:nowrap}}
+.base-intro__content{-webkit-transform:translateZ(0px);transform:tran3slateZ(0px);display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-flex:1;-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;position:relative}@media (min-width: 920px){.base-intro__content{margin-left:-15px;-webkit-flex-wrap:nowrap;-ms-flex-wrap:nowrap;flex-wrap:nowrap}}
+.page_head{background-color:#1f1f1f;width:100%; color: #eee;height: 100%;}
+.sector__h{color: #eee; position:relative;font-size: 1.875em;}
+.sector__description{color: #eee;}
+.filter-nav__main{color:#eee;width:100%;display:block;position:relative;text-align:left;z-index:10}
 @media (min-width: 1200px){.base-intro__content{margin-left:-20px}}
 .base-intro__content--center{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;}
-.page_head{background-color:#1f1f1f;width:100%; color: #eee;height: 150%;}
+.page_head{background-color:#1f1f1f;width:100%; color: #eee;height: 100%;}
 .sector__h{color: #eee; position:relative;font-size: 1.875em;}
 .sector__description{color: #eee;}
 .filter-nav__main{color:#eee;width:100%;display:block;position:relative;text-align:left;z-index:10}
